<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Stopper</string>
    <string name="action_settings">Settings</string>
    <string name="buttonStart">Start</string>
    <string name="buttonStop">Stop</string>
    <string name="buttonStopper">Stopper</string>
    <string name="buttonTimer">Timer</string>
    <string name="digitalClockInit">00:00:000</string>
    <string name="buttonUp">^</string>
    <string name="buttonDown">V</string>



</resources>
